<resources>
    <string name="app_name">TaskApp</string>

    <!-- Status Task -->
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>



    <!-- Generic -->
    <string name="text_title_warning">Atenção</string>
    <string name="text_button_warning">Entendi</string>
    <string name="email_empty">Preencha seu email</string>
    <string name="email_text">Email.</string>
    <string name="password_text">Senha.</string>
    <string name="password_empty">Preencha sua senha</string>
    <string name="hint_edit_email">Digite seu e-mail.</string>
    <string name="hint_edit_password">Digite sua senha.</string>
    <string name="error_generic">Ocorreu um erro! Por favor tente novamente mais tarde.</string>
    <string name="text_list_taks_empty">Nenhuma Tarefa Cadastrada</string>
    <string name="text_load_list_task">Aguarde, estamos carregando as informações.</string>
    <string name="text_delete_success_task">Tarefa removida com sucesso</string>
    <string name="text_button_dialog_confirm">Confirmar</string>
    <string name="text_title_dialog_delete">Deseja remover esta tarefa?</string>
    <string name="text_message_dialog_delete">Aperte em confirmar para remover a tarefa</string>

    <!--Login Fragment -->
    <string name="text_title_login_fragment">Login</string>
    <string name="text_button_register_login_fragment">Criar Conta</string>
    <string name="text_button_recover_login_fragment">Recuperar Conta</string>

    <!-- Register Fragment-->
    <string name="email_empty_register_fragment">Preencha um email válido</string>
    <string name="password_empty_register_fragment">Preencha uma senha</string>
    <string name="text_button_register_fragment">Criar Conta</string>
    <string name="text_title_toolbar_register_fragment">Criar Conta</string>

    <!-- Form Task Fragment-->
    <string name="description_empty_form_task_fragment">Preencha uma descrição</string>
    <string name="text_title_toolbar_form_task_fragment">Nova Tarefa</string>
    <string name="text_description_form_task_fragment">Descrição</string>
    <string name="text_status_form_task_fragment">Status</string>
    <string name="text_button_form_task_fragment">Salvar</string>
    <string name="hint_edit_description_form_task_fragment">Criar nova tela de login do app</string>
    <string name="text_save_success_form_task_fragment">Tarefa salva com sucesso</string>
    <string name="text_update_success_form_task_fragment">Tarefa atualizada com sucesso</string>
    <string name="text_toolbar_update_sucess_form_task_fragment">Editando tarefa...</string>

    <!-- Home Fragment -->
    <string name="text_title_dialog_confirm_logout">Deseja sair da sua conta?</string>
    <string name="text_message_dialog_confirm_logout">Aperte em confirmar para sair da sua conta.</string>

    <!-- Erros Firebase Authentication -->
    <string name="account_not_registered_register_fragment">nenhuma conta encontrada para este e-mail</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <!-- Recovery Account Fragment -->
    <string name="text_info_recover_account_fragment">Informe seu e-mail de cadastro para receber \num link para alteração da senha</string>
<string name="text_title_toolbar_recover_account_fragment">Recuperar Conta</string>
<string name="text_button_toolbar_recover_account_fragment">Enviar</string>
<string name="text_message_recover_account_fragment">Pronto, acabamos de enviar um link para o seu e-mail.</string>
</resources>