<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="24dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/email_text"
          android:textColor="@color/white"/>

      <EditText
          android:id="@+id/edtEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          style="@style/EditTextTheme"
          android:inputType="textEmailAddress"
          android:hint="@string/hint_edit_email"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/password_text"
          android:textColor="@color/white"/>

      <EditText
          android:id="@+id/edtPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/EditTextTheme"
          android:inputType="textPassword"
          android:layout_marginTop="4dp"
          android:hint="@string/hint_edit_password"/>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/btnLogin"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/ButtonTheme"
           android:layout_marginTop="16dp"
           android:text="@string/text_title_login_fragment"/>
      
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
              android:id="@+id/btnRegister"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:layout_marginTop="4dp"
              android:text="@string/text_button_register_login_fragment"
              android:textColor="@color/white"/>

          <TextView
              android:id="@+id/btnRecover"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAlignment="textEnd"
              android:layout_marginTop="4dp"
              android:layout_weight="1"
              android:textColor="@color/white"
              android:text="@string/text_button_recover_login_fragment"/>

      </LinearLayout>

      <ProgressBar
          android:id="@+id/progressBar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:indeterminateTint="@color/white"
          android:visibility="gone"
          tools:visibility="visible"
          android:layout_gravity="center"/>
  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>